another font for race timeout and race time

--- a/src/main.scss
+++ b/src/main.scss
@@ -12,7 +12,7 @@
 // -----------------------------------------------------------------------------
 /* Custom fonts */
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap"); // Montserrat
-@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap'); // Press Start 2P
+@import url('https://fonts.googleapis.com/css2?family=Lekton:ital,wght@0,400;0,700;1,400&display=swap'); // Lekton
 
 // -----------------------------------------------------------------------------
 // 3. BASE & RESET
