--- a/src/race.scss
+++ b/src/race.scss
@@ -96,7 +96,9 @@
               justify-content: center !important;
               align-items: center !important;
               flex-direction: row-reverse !important;
+              transform-origin: bottom center;
               animation: wait 1s infinite ease-in-out;
+              animation-timing-function: linear;
             }
 
             #racing {
@@ -717,15 +719,68 @@
 }
 
 // Animations
+
+/* Bounce Animation Variables */
+$bounce-intensity: 0.6 !default;  // Multiplier for bounce heights (0.5 = half height, 2 = double height)
+$rotation-intensity: 0.1 !default; // Multiplier for rotation degrees
+$ease-up: cubic-bezier(0.25, 0.46, 0.45, 0.94) !default;      // Going up timing
+$ease-down: cubic-bezier(0.55, 0.055, 0.675, 0.19) !default;  // Coming down timing
+$rotation-snap: cubic-bezier(0.68, -0.55, 0.265, 1.55) !default; // Aggressive rotation timing
+
 @keyframes wait {
   0% {
-    opacity: 1;
+    transform: translateY(0px) rotate(0deg);
+    animation-timing-function: $ease-up;
+  }
+  10% {
+    transform: translateY(#{-30px * $bounce-intensity}) rotate(#{-30deg * $rotation-intensity});
+    animation-timing-function: $ease-down;
+  }
+  20% {
+    transform: translateY(0px) rotate(#{-30deg * $rotation-intensity});
+    animation-timing-function: $rotation-snap;
+  }
+  22% {
+    transform: translateY(0px) rotate(#{25deg * $rotation-intensity});
+    animation-timing-function: $ease-up;
+  }
+  27% {
+    transform: translateY(#{-18px * $bounce-intensity}) rotate(#{35deg * $rotation-intensity});
+    animation-timing-function: $ease-down;
+  }
+  35% {
+    transform: translateY(0px) rotate(#{35deg * $rotation-intensity});
+    animation-timing-function: $rotation-snap;
+  }
+  37% {
+    transform: translateY(0px) rotate(#{-20deg * $rotation-intensity});
+    animation-timing-function: $ease-up;
+  }
+  40% {
+    transform: translateY(#{-8px * $bounce-intensity}) rotate(#{-25deg * $rotation-intensity});
+    animation-timing-function: $ease-down;
+  }
+  47% {
+    transform: translateY(0px) rotate(#{-25deg * $rotation-intensity});
+    animation-timing-function: $rotation-snap;
+  }
+  48% {
+    transform: translateY(0px) rotate(#{10deg * $rotation-intensity});
+    animation-timing-function: $ease-up;
   }
   50% {
-    opacity: 0.8;
+    transform: translateY(#{-3px * $bounce-intensity}) rotate(#{12deg * $rotation-intensity});
+    animation-timing-function: $ease-down;
+  }
+  55% {
+    transform: translateY(0px) rotate(#{12deg * $rotation-intensity});
+    animation-timing-function: $rotation-snap;
+  }
+  58% {
+    transform: translateY(0px) rotate(0deg);
   }
   100% {
-    opacity: 1;
+    transform: translateY(0px) rotate(0deg);
   }
 }
 
