adaptive for user panel #1 Inception

--- a/src/logo/logo-adaptive.scss
+++ b/src/logo/logo-adaptive.scss
@@ -1,5 +1,6 @@
-@media (max-width: 920px) {
+@media (max-width: 1000px) {
   #head #logo {
+    top: 88px !important;
     width: 55px !important;
     a {
       width: 55px !important;
