--- a/src/main.scss
+++ b/src/main.scss
@@ -66,7 +66,7 @@
 // -----------------------------------------------------------------------------
 // 7. THEME SPECIFIC
 // -----------------------------------------------------------------------------
-@import "cars";
+@import "./cars/cars";
 
 // -----------------------------------------------------------------------------
 // 8. RESPONSIVE & MEDIA QUERIES
