--- a/src/cars/data/_exclusive.scss
+++ b/src/cars/data/_exclusive.scss
@@ -19,3 +19,5 @@ $car1021-1: transparent url("https://i.imgur.com/mzXJiCW.png") no-repeat !import
 $car1022: transparent url("https://i.imgur.com/BkFXr6O.png") no-repeat !important;
 $car1023-1: transparent url("https://i.imgur.com/Dk9aRDa.png") no-repeat !important;
 $car1024: transparent url("https://i.imgur.com/rMPLyU8.png") no-repeat !important;
+
+$svg-cars-exclusive: ();
