--- a/src/cars/cars.scss
+++ b/src/cars/cars.scss
@@ -9,7 +9,7 @@ $shadow-opacity: 0.3; // Controls the darkness of the shadow (affects smoothness
 
 // Map of car background sizes
 $car-sizes: (
-  3: (
+  "car3": (
     size: 1000px 500px,
   ),
 );
@@ -132,48 +132,6 @@ $car-sizes: (
   }
 }
 
-/* ===== EXCLUSIVE CARS SET ===== */
-$exclusive-cars: (
-  car1000-1: $car1000-1,
-  car1001-1: $car1001-1,
-  car1002-1: $car1002-1,
-  car1003-1: $car1003-1,
-  car1006-1: $car1006-1,
-  car1008-1: $car1008-1,
-  car1009-1: $car1009-1,
-  car1010-1: $car1010-1,
-  car1012-3: $car1012-3,
-  car1015-1: $car1015-1,
-  car1016-1: $car1016-1,
-  car1023-1: $car1023-1,
-);
-
-@each $car-class, $variable in $exclusive-cars {
-  @include car-style($car-class, $variable);
-}
-
-/* ===== SPECIAL CARS ===== */
-// Grouped cars with their variables
-$car-groups: (
-  (car1013-3, car1013, car1014): $car1013-3,
-  (car1019, car45): $car1019,
-  (car1021-1, car1021): $car1021-1,
-  (car1022, car1004): $car1022,
-);
-
-@each $classes, $variable in $car-groups {
-  @include car-group($classes, $variable);
-}
-
-// Single special cars
-@include car-style(car1017, $car1017);
-@include car-style(car1018, $car1018);
-@include car-style(car1020, $car1020);
-@include car-style(car1024, $car1024);
-
-/* ===== BATMAN CAR ===== */
-@include car-style(car1011, $batman, "1011");
-
 /* ===== FIXES ===== */
 .profile-car .shop .tuning-category .tuning-item .car.light .car-base_ {
   opacity: 1 !important;
@@ -184,64 +142,22 @@ $car-groups: (
 }
 
 /* ===== STANDARD CARS ===== */
-$standard-cars: (
-  1: $car1,
-  2: $car2,
-  3: $car3,
-  4: $car4,
-  5: $car5,
-  6: $car6,
-  7: $car7,
-  8: $car8,
-  9: $car9,
-  10: $car10,
-  11: $car11,
-  12: $car12,
-  13: $car13,
-  14: $car14,
-  15: $car15,
-  16: $car16,
-  17: $car17,
-  18: $car18,
-  19: $car19,
-  20: $car20,
-  22: $car22,
-  23: $car23,
-  24: $car24,
-  25: $car25,
-  26: $car26,
-  27: $car27,
-  28: $car28,
-  29: $car29,
-  30: $car30,
-  31: $car31,
-  32: $car32,
-  33: $car33,
-  34: $car34,
-  35: $car35,
-  36: $car36,
-  37: $car37,
-  38: $car38,
-  39: $car39,
-  40: $car40,
-  41: $car41,
-  42: $car42,
-  43: $car43,
-  44: $car44,
-);
+// Merge SVG car maps from defaults and exclusive
+$svg-cars: map-merge($svg-cars-defaults, $svg-cars-exclusive);
 
-@each $car-num, $car-variable in $standard-cars {
-  $car-data: get-car-data($car-num);
-  $size: 500px 200px;
-  @if type-of($car-data) == map {
-    $size: map-get($car-data, size);
-  } @else if $car-data {
-    $size: $car-data;
-  }
+// Dynamically generate car selectors and backgrounds from $svg-cars
+@each $car-key, $svg in $svg-cars {
+  // Determine class name: if key is number, use car#{$car-key}; else use key as-is
+  $class-name: if(type-of($car-key) == "number", "car#{$car-key}", $car-key);
+  $car-size-data: map-get($car-sizes, $car-key);
+  $size: if(
+    type-of($car-size-data) == map and map-has-key($car-size-data, size),
+    map-get($car-size-data, size),
+    500px 200px
+  );
 
-  div[class*="car-base"].car#{$car-num} {
+  div[class*="car-base"].#{$class-name} {
     position: relative;
-
     &::before {
       content: "";
       position: absolute;
@@ -249,9 +165,13 @@ $standard-cars: (
       left: 0;
       width: 100%;
       height: 100%;
-      background: $car-variable;
+      background: if(
+        type-of(map-get($processed-svg-cars, $car-key)) == "string",
+        map-get($processed-svg-cars, $car-key),
+        map-get($svg-cars, $car-key)
+      );
       background-repeat: no-repeat !important;
-      background-size: $size !important;
+      background-size: #{$size} !important;
       pointer-events: none;
       z-index: 1;
     }
@@ -263,15 +183,28 @@ div[class*="car-base"] {
   @include car-shadow;
 }
 
-// Special case for car1 with specific background-color
-.car1[style*="background-color: #777"] {
+// Assign processed SVG to $car1 for correct background
+$car1: map-get($processed-svg-cars, "car1");
+
+// Apply car1 SVG background to .imgcont containing .car1[style*="background-color: #777"]
+.imgcont:has(.car1[style*="background-color: #777"]) {
+  position: relative;
+  background-color: $middlegray !important;
+
   &::before {
-    background: $car1;
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: $car1 !important;
     background-repeat: no-repeat !important;
     background-size: 500px 200px !important;
-    background-position: center center !important;
+    z-index: 1;
   }
-  background-color: $middlegray !important;
+
+  @include car-shadow;
 }
 
 /* ===== CAR POSITION PRIORITIES FIX ===== */
