--- a/src/race.scss
+++ b/src/race.scss
@@ -143,6 +143,7 @@
             border: none !important;
             color: transparent !important;
             font-size: 0 !important;
+            min-height: 45px !important;
           }
 
           #typetext {
