--- a/src/cars/cars.scss
+++ b/src/cars/cars.scss
@@ -12,6 +12,9 @@ $car-sizes: (
   "car3": (
     size: 1000px 500px,
   ),
+  "car15": (
+    size: 1000px 300px,
+  ),
 );
 
 // Function to get car data
