Fix for Caterpillar_247B

--- a/src/cars/data/_defaults.scss
+++ b/src/cars/data/_defaults.scss
@@ -43,7 +43,6 @@ $car19: transparent url("https://i.imgur.com/Dh3ioZS.png") no-repeat !important;
 $car20: transparent url("https://i.imgur.com/qu1EHaB.png") no-repeat !important;
 $car21: transparent url("https://i.imgur.com/1b0c2a3.png") no-repeat !important; // Fake
 $car22: transparent url("https://i.imgur.com/XjAdCEu.png") no-repeat !important;
-$car24: transparent url("https://i.ibb.co/w6nKw0L/24.png") no-repeat !important;
 $car25: transparent url("https://i.imgur.com/iheYOvs.png") no-repeat !important;
 $car26: transparent url("https://i.imgur.com/HVdv2ZL.png") no-repeat !important;
 $car27: transparent url("https://i.imgur.com/RLn2dy9.png") no-repeat !important;
@@ -73,5 +72,6 @@ $svg-cars-defaults: (
   "car13": $car13,
   "car15": $car15,
   "car23": $car23,
+  "car24": $car24,
   "car38": $car38,
 );
